several minor bugfixes